# sudonit-glasses

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLOUD.md  CODE_SIMPLIFICATION_REPORT.md  CONTRIBUTING.md  DECISIONS.md  DEMO_AND_LAUNCH.md  DEMO_DAY_PLAN.md  DEMO_METRICS.md  DEMO_SUCCESS_CRITERIA.md  DEVELOPMENT.md  DOCS_CONSOLIDATION_PLAN.md  FAILURE_SCENARIOS.md  FUTURE_ROADMAP_REVIEW.md  HARDWARE.md  IDEAS.md  MASTER.md  MILESTONES.md  Makefile  OPEN_TASKS.md  PRODUCT.md  PROJECT_BRIEF_SUDONIT.md  PROTOCOL.md  README.md  REFERENCES.md  RISKS.md  ROADMAP.md  RUNNING.md  SIMPLIFICATION_EXECUTION_LOG.md  TOP_RISKS.md  VALIDATION.md  VISION.md  WEBSITE.md  WHY_SUDONIT_LOSES.md  WHY_SUDONIT_WINS.md  requirements-dev.txt
.github/workflows/: ci.yml
UX_PROTOTYPES/: DESIGN_REVIEW.md  README.md  concept-a-minimal-assistant.html  concept-c-navigation.html  concept-d-accessibility.html  index.html  runtime-sim.html
archive/: FIRST_WEEK_EXPERIENCE.md  FOUNDER_VISION_ALIGNMENT.md  OPUS_BRIEF.md  PRODUCT_REVIEW.md  PROJECT_AUDIT.md  README.md  README_REWRITE_PLAN.md  WEBSITE_REVIEW.md  ОБЪЯСНЕНИЕ_ДЛЯ_ВЛАДЕЛЬЦА.md
archive/docs/: COMPETITOR_ANALYSIS.md  DISPLAY_BRINGUP_PLAN.md  UI_RUNTIME_ARCHITECTURE.md
archive/ux_prototypes/: FUTURE_HARDWARE_IMPACT.md  README.md  common.css  concept-b-ar-hud.html
docs/: APP_MODEL.md  AUDIO_BRINGUP.md  BOARD_RESOURCES.md  CAMERA_BRINGUP.md  DISPLAY_ARCHITECTURE.md  DISPLAY_EVALUATION.md  FRAME_ARCHITECTURE.md  HARDWARE_INTEGRATION_PLAN.md  MVP_DEFINITION.md  PRE_HARDWARE_ROADMAP.md  PRODUCT_VISION.md  PROVISIONING_PLAN.md  UI_STATE_MACHINE.md
eval/: __init__.py  run_eval.py  stats.py
firmware/: CMakeLists.txt  README.md
firmware/components/protocol/: CMakeLists.txt
firmware/components/protocol/include/sudonit/protocol/: framing.h  json.h  messages.h  sha256.h
firmware/components/protocol/src/: framing.c  json.c  messages.c  sha256.c
firmware/esp-idf/: CMakeLists.txt  README.md  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
firmware/esp-idf/main/: CMakeLists.txt  app_main.c  idf_component.yml
firmware/include/sudonit/: config.h  config_store.h  error.h  log.h  provisioning.h
firmware/include/sudonit/hal/: audio.h  battery.h  camera.h  mic.h  net.h  transport.h
firmware/src/app/: device.c  device.h  main_config.c  main_host.c  main_interop.c  main_provision.c  provisioning.c
firmware/src/config/: config.c  config_store_host.c  config_store_nvs.c
firmware/src/core/: error.c  log.c
firmware/src/hal/esp32/: audio_esp.c  battery_esp.c  camera_esp.c  mic_esp.c  net_esp.c  transport_wifi.c
firmware/src/hal/host/: net_host.c  transport_tcp.c
firmware/src/hal/mock/: audio_mock.c  battery_mock.c  camera_mock.c  mic_mock.c
firmware/test/: run_interop.sh  test_config.c  test_hal.c  test_protocol.c  test_provisioning.c  test_robustness.c
phone/: __init__.py  image.py  pipeline.py  server.py
phone/ai/: __init__.py  anthropic_provider.py  provider.py  stub_provider.py
phone/audio/: __init__.py  tts.py
protocol/: TRANSPORT.md  __init__.py  framing.py  messages.py
simulator/: __init__.py  glasses_sim.py
tests/: test_ai_benchmark.py  test_camera_degrade.py  test_end_to_end_demo.py  test_eval_harness.py  test_firmware_interop.py  test_framing.py  test_image.py  test_pipeline.py  test_server_e2e.py
tools/: ai_benchmark.py  camera_degrade.py  end_to_end_demo.py  make_sample_image.py  run_benchmarks.sh
